@@ -1,1 +1,87 @@
+# 🏋️ Spor Salonu Otomasyonu Uygulaması (JavaFX & FXML)
+
+## 📲 Özellikler
+
+* 🖥️ Üye kayıt ve giriş sistemi
+* 💻 Yönetici ve antrenör giriş sistemi
+* 💰 Ödeme yöntemi seçenekleri (Kredi Kartı, Havale, Nakit)
+* 🧾 Üylük durumu, ödeme bilgileri takibi
+* 📊 Boy, kilo, yağ, kas analizleri
+* 📈 Grafikler eşliğinde vücut gelişim takibi
+* 👨‍🏫 Antrenör tarafından antrenman programı oluşturma, atama, düzenleme, silme
+* 📖 Antrenör tarafından üye vücut gelişim veri girişi, analizi
+* 🧑‍⚖️ Yönetici için üye, antrenör yönetimi
+* 🏦 Yönetici için hasılat grafikleri
+
+---
+
+## 🖊️ Literatür ve Özgünlük
+
+Proje geliştirme sürecinden önce, JavaFX teknolojisi ve spor salonu otomasyon sistemleri üzerine kapsamlı bir literatür taraması gerçekleştirilmiştir. Bu ön çalışmanın ardından, projenin tüm modülleri özgün bir yaklaşımla sıfırdan tasarlanıp kodlanmıştır. Mevcut örneklerden herhangi bir esinlenme olmaksızın geliştirilen sistem, kendine has kullanıcı deneyimi sunmaktadır.
+
+---
+
+## 👨‍🏫 Baş Danışman
+
+| 📌 Danışman Adı            | 👨‍🏫 Bölümü             |
+| -------------------------- | ------------------------ |
+| **Öğr. Gör. Naciye Macit SEZİKLİ** | Bilgisayar Programcılığı |
+
+---
+
+## 🧑‍💼 Projeyi Geliştirenler
+
+Bu proje, 7 kişilik bir ekip çalışmasıyla hayata geçirilmiştir. Her bir ekip üyesi farklı modüllerde aktif rol almıştır:
+
+| 🎓 İsim                  |
+| ------------------------ |
+| 👤 Eren Can TÜRKOĞLU     |
+| 👤 Ömer Yağız KARAMAHMUT |
+| 👤 Musa SARAÇOĞLU        |
+| 👤 Semih KILIÇ           |
+| 👤 Abdullah ASLAN        |
+| 👤 Necati DURSUN         |
+| 👤 Eren TURUN            |
+
+---
+
+## 🛜 Kullanılan Teknolojiler
+
+* Java 17+
+* JavaFX
+* FXML
+* SceneBuilder
+* MVC mimarisi
+* CSS (JavaFX arayüz tasarımı için)
+* Microsoft SQL Server
+* JDBC (Veritabanı bağlantısı için)
+
+---
+
+## 📦 Kurulum ve Çalıştırma
+
+Projeyi klonlayın:
+
+```bash
+git clone https://github.com/erencwn/SporSalonu.git
+```
+
+* Eclipse veya benzeri bir IDE ile projeyi açın.
+* JavaFX kütüphanelerini projeye ekleyin.
+* Gerekirse VM options kısmına şu parametreleri yazın:
+
+```bash
+--module-path /path/to/javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+```
+
+* `Main.java` dosyasını çalıştırarak uygulamayı başlatın.
+
+---
+
+## 📩 İletişim
+
+Projeyle ilgili görüş, öneri veya geri bildirimleriniz için bizimle iletişime geçebilirsiniz:
+
+📧 **[erencanturkoglu@gmail.com](mailto:erencanturkoglu@gmail.com)**
+veya GitHub üzerinden [issue](https://github.com/erencwn/SporSalonu/issues) açabilirsiniz.
 
